依照java25的新特性对实现做修改